# mrps

./: README
c++-apolkanov/: Makefile  echo_tcp.cpp
c++-virtan/: CMakeLists.txt  Dockerfile  Makefile  README.md  server.cc
c-bachan/: build.sh  client.c  header.h  server-honest.c  server.c  thread-honest.c  thread.c
client-c++-virtan/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  client.cc  test.sh
erlang-virtan/: README  client.erl  server.erl
java-philipp/: .project  pom.xml
java-philipp/etc/: echoserver-0.0.1-SNAPSHOT.classpath
java-philipp/src/: distribution.xml
java-philipp/src/main/etc/: logback-echoserver.xml
java-philipp/src/main/java/vn/itim/samples/echoserver/: IOScheduler.java  SelectorProcessor.java  Server.java  ServerRunner.java
js-nikita/: README.md  tcp-cluster.js
perl-ershov/: 10kx.pl  10kx_decoded.pl
python-vkazanov/: echo.py  sender.py  show_stats.py
ruby-celluloid-io/: Gemfile  server.rb
ruby-em/: Gemfile  server.rb
ruby-eventmachine/: Gemfile  server.rb
